<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.olalucas.MainActivity">

    <TextView
        android:textColor="@color/purple_700"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/Imc"
        android:textAlignment="center"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textview_result"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:padding="16dp"
        android:layout_height="wrap_content"
        tools:text="RЯ Team"
        android:textColor="@color/purple_700"
        android:textSize="38sp" />

    <TextView
        android:id="@+id/textview_classificacao"
        android:layout_margin="8dp"
        android:textAlignment="center"
        tools:text="Classificação: Normal  "
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_margin="16dp"
        android:text="@string/Veja_tabela"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_margin="16dp"
        android:text="@string/Abaixo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_margin="16dp"
        android:text="@string/Normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_margin="16dp"
        android:text="@string/Sobrepeso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_margin="16dp"
        android:text="@string/Obesidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_margin="16dp"
        android:text="@string/Obesidade_II"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />




</LinearLayout>